--- a/css/thu-vien.css
+++ b/css/thu-vien.css
@@ -3,89 +3,20 @@
 /* yêu cầu các box khi thêm đường viền hoặc padding thì thêm vào trong (inside) */
 *{box-sizing : border-box}
 
-.col-1
-{
-	width: 8.33%;
-/*	border: 1px solid red;*/
-	padding: 15px;
-}
-
-.col-2
-{
-	width: 16.66%;
-/*	border: 1px solid red;*/
-	padding: 15px;
-}
-
-.col-3
-{
-	width: 25%;
-/*	border: 1px solid red;*/
-	padding: 15px;
-}
-
-.col-4
-{
-	width: 33.33%;
-/*	border: 1px solid red;*/
-	padding: 15px;
-}
-
-.col-5
-{
-	width: 41.66%;
-/*	border: 1px solid red;*/
-	padding: 15px;
-}
-
-.col-6
-{
-	width: 50%;
-/*	border: 1px solid red;*/
-	padding: 15px;
-}
-
-.col-7
-{
-	width: 58.33%;
-/*	border: 1px solid red;*/
-	padding: 15px;
-}
-
-.col-8
-{
-	width: 66.66%;
-/*	border: 1px solid red;*/
-	padding: 15px;
-}
-
-.col-9
-{
-	width: 75%;
-/*	border: 1px solid red;*/
-	padding: 15px;
-}
-
-.col-10
-{
-	width: 83.33%;
-/*	border: 1px solid red;*/
-	padding: 15px;
-}
-
-.col-11
-{
-	width: 91.66%;
-/*	border: 1px solid red;*/
-	padding: 15px;
-}
-
-.col-12
-{
-	width: 100%;
-/*	border: 1px solid red;*/
-	padding: 15px;
-}
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+[class*="col-"]
+{padding: 15px;}
 
 .container
 {
@@ -109,6 +40,7 @@
 .bg-gmail{background-color: #EA4335}
 .bg-fb{background-color: #4267B2}
 .bg-ytb{background-color: #FF0000}
+.bg-gray{background-color: #272f31}
 
 /*------------text color lib---------------*/
 .text-light { color: #fff}
@@ -126,10 +58,6 @@
 /*-----------text transform-----------------*/
 .text-uppercase{text-transform: uppercase}
 
-/*-----------FLOAT------------------*/
-.float-left {float: left}
-.float-right {float: right}
-
 /*font-lib*/
 .f-m{font-weight: 500}
 .font-bold{font-weight: bold}
@@ -137,12 +65,16 @@
 /*--------------padding, margin------------*/
 .margin-0{margin: 0}
 .margin-5{margin: 5px}
+.mg-t-bt-30{margin: 30px 0!important}
+.mg-bt-30{margin-bottom: 30px !important}
 
 .pd-0{padding: 0}
 .pd-5{padding: 5px}
 .pd-20{padding: 20px}
 .pd-1-0{padding: 1px 0}
+.pd-t-30{padding-top:30px}
 
+.img-full{width: 100%}
 .img-100{width: 100%}
 .opacity-50{opacity: 0.5}
 
@@ -159,8 +91,44 @@
 
 /*------------justify content---------------*/
 .fl-between-ct{display: flex; justify-content: space-between; align-items: center}
+.fl-ct{display: flex; justify-content: center}
+
+/*------------align items -----------------*/
+.items-center{align-items: center}
 
 .w-186 {width: 186px}
 
+/*-------------- style for ipad --------------------*/
+@media(min-width: 600px)
+{
+	.col-md-1{width: 8.33%}
+	.col-md-2 {width: 16.66%;}
+    .col-md-3 {width: 25%;}
+    .col-md-4 {width: 33.33%;}
+    .col-md-5 {width: 41.66%;}
+    .col-md-6 {width: 50%;}
+    .col-md-7 {width: 58.33%;}
+    .col-md-8 {width: 66.66%;}
+    .col-md-9 {width: 75%;}
+    .col-md-10 {width: 83.33%;}
+    .col-md-11 {width: 91.66%;}
+    .col-md-12 {width: 100%;}
+}
+
+@media(min-width: 1000px)
+{
+	.col-lg-1{width: 8.33%}
+	.col-lg-2 {width: 16.66%;}
+    .col-lg-3 {width: 25%;}
+    .col-lg-4 {width: 33.33%;}
+    .col-lg-5 {width: 41.66%;}
+    .col-lg-6 {width: 50%;}
+    .col-lg-7 {width: 58.33%;}
+    .col-lg-8 {width: 66.66%;}
+    .col-lg-9 {width: 75%;}
+    .col-lg-10 {width: 83.33%;}
+    .col-lg-11 {width: 91.66%;}
+    .col-lg-12 {width: 100%;}
+}
 
 
